--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body id="box">
 
 	<div id="content">
-		<h1>Our Menu</h1>
+		<h1>Our Exciting Menu</h1>
 
 		<div class="row">
 		  <div class="col-lg-4 col-md-6 col-sm-12">
